--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,10 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "james-heinrich/getid3": "^1.9",
         "laravel/framework": "^11.9",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "pbmedia/laravel-ffmpeg": "^8.7"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
