--- a/package.json
+++ b/package.json
@@ -3,15 +3,29 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite"
+        "dev": "vite",
+        "preview": "vite preview"
     },
     "devDependencies": {
         "autoprefixer": "^10.4.20",
-        "axios": "^1.7.4",
+        "axios": "^1.9.0",
         "concurrently": "^9.0.1",
+        "cross-env": "^7.0.3",
+        "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.47",
+        "sass": "^1.87.0",
+        "sass-loader": "^16.0.5",
         "tailwindcss": "^3.4.13",
-        "vite": "^5.0"
+        "vite": "^5.0",
+        "vite-svg-loader": "^5.1.0",
+        "vue": "^3.5.13",
+        "vue-template-compiler": "^2.7.16",
+        "webpack": "^5.99.8",
+        "webpack-cli": "^6.0.1"
+    },
+    "dependencies": {
+        "@vitejs/plugin-vue": "^5.2.3",
+        "pinia": "^3.0.2"
     }
 }
