--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "php": "^8.2",
         "james-heinrich/getid3": "^1.9",
         "laravel/framework": "^11.9",
-        "laravel/sanctum": "^4.0",
+        "laravel/sanctum": "*",
         "laravel/tinker": "^2.9",
         "pbmedia/laravel-ffmpeg": "^8.7"
     },
