--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
         "webpack-cli": "^6.0.1"
     },
     "dependencies": {
+        "@inertiajs/inertia": "^0.11.1",
+        "@inertiajs/inertia-vue3": "^0.6.0",
         "@vitejs/plugin-vue": "^5.2.3",
-        "pinia": "^3.0.2"
+        "pinia": "^3.0.2",
+        "sberzvuk-api": "^2.1.9"
     }
 }
