--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "bootstrap": "^5.3.6",
         "bootstrap-vue": "^2.23.1",
         "pinia": "^3.0.2",
+        "pinia-plugin-persistedstate": "^4.3.0",
         "sberzvuk-api": "^2.1.9"
     }
 }
