--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/framework": "^11.9",
         "laravel/sanctum": "*",
         "laravel/tinker": "^2.9",
-        "pbmedia/laravel-ffmpeg": "^8.7"
+        "pbmedia/laravel-ffmpeg": "^8.7",
+        "pusher/pusher-php-server": "^2.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
@@ -65,6 +66,7 @@
         "preferred-install": "dist",
         "sort-packages": true,
         "allow-plugins": {
+            "composer/installers": true,
             "pestphp/pest-plugin": true,
             "php-http/discovery": true
         }
