--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
         "axios": "^1.9.0",
         "concurrently": "^9.0.1",
         "cross-env": "^7.0.3",
+        "laravel-echo": "^2.1.4",
         "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.47",
+        "pusher-js": "^8.4.0",
         "sass": "^1.87.0",
         "sass-loader": "^16.0.5",
         "tailwindcss": "^3.4.13",
